--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^3.0.0",
     "jquery": "^3.6.0"
@@ -17,6 +19,7 @@
   "dependencies": {
     "browser-sync": "^2.27.7",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^7.1.0",
     "sass": "^1.49.0"
   }
 }
